# shelltrack

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
config/: shelltrack.toml
scripts/: fix-repos.sh  install.sh  rebuild-and-restart.sh  test-shelltrack.sh  test-without-ssh.sh
src/: main.rs
src/blocker/: mod.rs
src/collectors/: audit.rs  audit_ssh.rs  mod.rs  ssh.rs
src/config/: mod.rs
src/detectors/: brute_force.rs  mod.rs
src/notifiers/: mod.rs  telegram.rs
src/storage/: mod.rs  r2.rs
systemd/: shelltrack.service
